Feat: finalizing backend and preparing deploy

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,3 +12,8 @@ quarkus.hibernate-orm.log.format-sql=true
 quarkus.swagger-ui.always-include=true
 quarkus.smallrye-openapi.info-title=Controlers-Products API
 quarkus.smallrye-openapi.info-version=1.0.0
+
+%prod.quarkus.datasource.jdbc.url=${DATABASE_URL}
+%prod.quarkus.datasource.username=${DATABASE_USER}
+%prod.quarkus.datasource.password=${DATABASE_PASS}
+%prod.quarkus.hibernate-orm.database.generation=update
