--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,3 +17,8 @@ quarkus.smallrye-openapi.info-version=1.0.0
 %prod.quarkus.datasource.username=${DATABASE_USER}
 %prod.quarkus.datasource.password=${DATABASE_PASS}
 %prod.quarkus.hibernate-orm.database.generation=update
+
+quarkus.http.cors=true
+quarkus.http.cors.origins=*
+quarkus.http.cors.headers=accept, authorization, content-type, x-requested-with
+quarkus.http.cors.methods=GET, OPTIONS, POST, PUT, DELETE
