Fix update cors

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,9 @@
+quarkus.http.cors.enabled=true
+quarkus.http.cors.origins=/.*/
+quarkus.http.cors.access-control-allow-credentials=true
+quarkus.http.cors.headers=accept, authorization, content-type, x-requested-with
+quarkus.http.cors.methods=GET, OPTIONS, POST, PUT, DELETE
+
 quarkus.datasource.db-kind=mysql
 quarkus.datasource.username=${DB_USER}
 quarkus.datasource.password=${DB_PASS}
@@ -18,7 +24,3 @@ quarkus.smallrye-openapi.info-version=1.0.0
 %prod.quarkus.datasource.password=${DATABASE_PASS}
 %prod.quarkus.hibernate-orm.database.generation=update
 
-quarkus.http.cors=true
-quarkus.http.cors.origins=*
-quarkus.http.cors.headers=accept, authorization, content-type, x-requested-with
-quarkus.http.cors.methods=GET, OPTIONS, POST, PUT, DELETE
